finished dashboard page (untested)

--- a/lang/english/error.json
+++ b/lang/english/error.json
@@ -1,7 +1,14 @@
 {
   "error": {
     "SERVER_ERROR": "Server error 500. Try again later.",
-    
+
+    "USER_FETCH_FAILED_NOT_FOUND": "Unable to find a user with the provided email address. Please contact our support for assistance.",
+   
+    "POST_FETCH_FAILED": "Failed to fetch posts. Please try again later.",
+    "POST_DELETE_FAILED": "Failed to delete the post. Please try again later.",
+    "POST_BOOKMARK_FAILED" : "Failed to bookmark the post. Please try again later.",
+    "POST_UNBOOKMARK_FAILED" : "Failed to unbokkmark the post. Please try again later.",
+
     "REGISTRATION_FAILED_EMAIL_ALREADY_EXISTS": "An account with this email already exists. Please log in.",
     "REGISTRATION_FAILED_PASSWORD_TOO_SMALL": "Password is too short. Please ensure it is 8 chars long.",
     "REGISTRATION_FAILED_PASSWORD_TOO_BIG": "Password is too long. Please ensure it is not more than 20 char long.",
@@ -11,23 +18,23 @@
     "REGISTRATION_FAILED_PASSWORD_NEEDS_NUMBER": "Password must contain at least one number.",
     "REGISTRATION_FAILED_FULLNAME_TOO_SMALL": "Full name is too short. Please ensure it meets the minimum length requirement.",
     "REGISTRATION_FAILED_EMAIL_INVALID": "The email address provided is invalid. Please enter a valid email address.",
-    "REGISTRATION_FAILED": "Registration failed due to: {origin}",
-    
+    "REGISTRATION_FAILED": "Registration failed.",
+
     "VERIFICATION_FAILED_EMAIL_CANNOT_BE_SENT": "We cannot send you the verification email at the moment. Try again later.",
     "VERIFICATION_FAILED_USER_CANNOT_BE_VERIFIED": "We cannot verify your account at the moment. Try again later.",
-     "VERIFICATION_FAILED": "Verify failed due to: {origin}",
+    "VERIFICATION_FAILED": "Verify failed.",
 
     "RESETPASSWORD_FAILED_EMAIL_CANNOT_BE_SENT": "We cannot send you the reset password email at the moment. Try again later.",
     "RESETPASSWORD_FAILED_PASSWORD_CANNOT_BE_CHANGED": "We cannot reset your password at the moment. Try again later.",
-    "RESETPASSWORD_FAILED": "Reset password failed due to: {origin}",
-    
-    "LOGIN_FAILED": "Login failed due to: {origin}",
+
+    "LOGIN_FAILED": "Login failed.",
     "LOGIN_FAILED_INVALID_CREDENTIALS": "Invalid email or password!",
-    
+
     "CALLBACK_ERROR": "An error occurred during the callback process. Please try again later.",
+
     "IDENTIFICATION_FAILED_TOKEN_CANNOT_BE_CREATED": "We cannot generate an identification token for your account at the moment. Try again later.",
     "IDENTIFICATION_FAILED_TOKEN_INVALID": "Invalid identification token. Please check and try again.",
     "IDENTIFICATION_FAILED_TOKEN_CANNOT_BE_VERIFIED": "We cannot verify your identification token at the moment. Try again later.",
-    "IDENTIFICATION_FAILED": "Identification failed due to: {origin}"
+    "IDENTIFICATION_FAILED": "Identification failed."
   }
 }
